fix z-index

--- a/client/src/App/App.css
+++ b/client/src/App/App.css
@@ -41,6 +41,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  z-index: 99;
 }
 
 .circles li {
